--- a/HW1/CMakeLists.txt
+++ b/HW1/CMakeLists.txt
@@ -2,4 +2,6 @@ AUX_SOURCE_DIRECTORY(./src HW1_SRC_LIST)
 
 ADD_EXECUTABLE(hw1 ${HW1_SRC_LIST})
 
+MESSAGE(STATUS "HW1 src list: " ${HW1_SRC_LIST})
+
 target_include_directories(hw1 PRIVATE ./include)
