add comment to hw1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,6 @@ PROJECT(DATA_STRUCTURE)
 
 ADD_SUBDIRECTORY(HW1)
 ADD_SUBDIRECTORY(HW2)
+ADD_SUBDIRECTORY(LAB1)
+ADD_SUBDIRECTORY(tree)
+ADD_SUBDIRECTORY(kmp_search)
