--- a/HW2/CMakeLists.txt
+++ b/HW2/CMakeLists.txt
@@ -1,5 +1,1 @@
-AUX_SOURCE_DIRECTORY(./src HW2_SRC_LIST)
-
-ADD_EXECUTABLE(hw2 ${HW2_SRC_LIST})
-
-TARGET_INCLUDE_DIRECTORIES(hw2 PRIVATE ./include)
+ADD_EXECUTABLE(hw2 hw2.cpp)
