--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,5 @@ ADD_SUBDIRECTORY(HW2)
 ADD_SUBDIRECTORY(LAB1)
 ADD_SUBDIRECTORY(tree)
 ADD_SUBDIRECTORY(kmp_search)
+ADD_SUBDIRECTORY(LAB2)
+ADD_SUBDIRECTORY(test)
