add HW3 HW4 LAB3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,5 @@ ADD_SUBDIRECTORY(kmp_search)
 ADD_SUBDIRECTORY(LAB2)
 ADD_SUBDIRECTORY(test)
 add_subdirectory(HW3)
+add_subdirectory(LAB3)
+add_subdirectory(HW4)
